# ChangeLog for x11-libs/qt-core
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*qt-core-4.5.9999-r1 (03 Oct 2009)

  03 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> -qt-core-4.5.9999.ebuild,
  +qt-core-4.5.9999-r1.ebuild, qt-core-4.6.0_alpha_pre1-r2.ebuild:
  Fixed generations of translations for 4.5.9999

*qt-core-4.9999-r1 (03 Oct 2009)
*qt-core-4.6.9999-r1 (03 Oct 2009)
*qt-core-4.6.0_alpha_pre1-r2 (03 Oct 2009)

  03 Oct 2009; Dominik Kapusta <ayoy@gentoo.org>
  -qt-core-4.6.0_alpha_pre1-r1.ebuild, +qt-core-4.6.0_alpha_pre1-r2.ebuild,
  -qt-core-4.6.9999.ebuild, +qt-core-4.6.9999-r1.ebuild,
  -qt-core-4.9999.ebuild, +qt-core-4.9999-r1.ebuild:
  Fixed generation of translations for 4.6 and live ebuilds

*qt-core-4.5.3-r1 (02 Oct 2009)

  02 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> -qt-core-4.5.3.ebuild,
  +qt-core-4.5.3-r1.ebuild:
  Added lconvert, lrelease and lupdate (moved from qt-gui) to allow
  generating translations

  02 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> qt-core-4.5.3.ebuild:
  Temporarily disabling translations generation

*qt-core-4.5.3 (02 Oct 2009)

  02 Oct 2009; Alex Alexander <wired@gentoo.org> +qt-core-4.5.3.ebuild:
  version bump

  13 Sep 2009; Dominik Kapusta <d@ayoy.net> metadata.xml:
  Added exceptions flag description.

  11 Aug 2009; Alex Alexander <wired@gentoo.org> qt-core-4.5.9999.ebuild,
  qt-core-4.9999.ebuild:
  added setqtenv in src_install, thanks to Tommy[D]

  27 Jul 2009; Alex Alexander <wired@gentoo.org> qt-core-4.9999.ebuild:
  fixed qt-core 4.9999 - thanks to kent\n

  27 Jun 2009; Dror Levin <spatz@psybear.com> -qt-core-4.5.2.ebuild:
  Moved to tree.

  27 Jun 2009; Davide Pesavento <davidepesa@gmail.com> -qt-core-4.5.1-r1.ebuild,
  -files/qt-core-4.5-boilerplate.diff:
  Drop old.

  26 Jun 2009; Davide Pesavento <davidepesa@gmail.com> qt-core-4.5.9999.ebuild,
  qt-core-4.9999.ebuild:
  Cleanup IUSE in live ebuilds too.

  26 Jun 2009; Markos Chandras <hwoarang@gentoo.org>