@@ -4,10 +4,10 @@ AUX rcc.pro 3440 RMD160 42e65efa8dc027f8a2b6c933243a91c1cac96092 SHA1 017ea0aea7
 AUX uic.pro 3671 RMD160 b6d3c392a67b66f6996134975e99db03a9987baf SHA1 f87fff37256b5c966e4d21b0fb6cb64b717f3d07 SHA256 904084b6d936fb9bab33d3592ec69dc9872708a74834f0cb498e8153f784c7fc
 DIST qt-everywhere-opensource-src-4.6.0-tp1.tar.gz 146815131 RMD160 b8526a69e7b5817f32d0f3f7133bf9213c0668bf SHA1 4394bea076279ea090549d3caa00cc1f5e33a22b SHA256 9cfe0418699e231587182b441c8f6ca68f109059c62bfc8dd9daeafb8277d211
 DIST qt-x11-opensource-src-4.5.3.tar.gz 125384668 RMD160 93d765ecf89ed15668a4eedc7d77c2a2e41424a2 SHA1 78620ffd03c83c4d86f5039ccf7b09e5c709ed25 SHA256 0c87fc42825d3556970db4412257c6874e716ac3bc45e6f273924d5d6a089aa6
-EBUILD qt-core-4.5.3-r1.ebuild 6254 RMD160 64c48739b4fb31a0fca0b25595c7db4d5e9b5cab SHA1 279bf10c2832752d13339352c3e4acb7fe731317 SHA256 2823cd94d3557ce4043e09c5537747d26cd6da721cd21983538552c8e1cf4923
-EBUILD qt-core-4.5.9999-r1.ebuild 6082 RMD160 e23c07738ac8a4abab88b27d5e2e61e3f9d8291b SHA1 2035b718a2f715b1c17f4e8481c8512b15f645fb SHA256 164857453b32924a0c74d25a1ba839f699605d45ac0f0872d1c6eb79000cf50d
-EBUILD qt-core-4.6.0_alpha_pre1-r2.ebuild 6088 RMD160 48b8faac27754c61c0bab47f9e2002bbf51b63f6 SHA1 827c2669e9c08d7874d021b1639067479762f1ad SHA256 fa7b4c6308611b3bab2fbf3ead8608165b4fc7ee99f75c4cd2d89d312923c605
-EBUILD qt-core-4.6.9999-r1.ebuild 6077 RMD160 5b2b8be7c81404c64d8fb192c67bb9f36c871226 SHA1 f43b4c4a9473075665948928a215787723599980 SHA256 54f2a630870ab6ac7154a3c205a38f6534a245059a0e1d2f63f820aa4771deed
-EBUILD qt-core-4.9999-r1.ebuild 6076 RMD160 ae0e1bf81b44cf9403b082379f382451700dfeba SHA1 c59e7d6da432754a2813d3595775124fa0bf05db SHA256 8c337dceeb2432b5ca8e0afa9278b62c20363afa413fa0f7d5e2b7a9b91370f5
-MISC ChangeLog 7669 RMD160 081b2a15cbeeea5c983d6509f7fe4c29e145758f SHA1 dfc19a78c371050ce4873646fb9c67a2b197a314 SHA256 8feeafbae34b20b7510c703fd603cdbaabb82e9bd5f2495d6abf00d954da7b77
+EBUILD qt-core-4.5.3-r1.ebuild 6297 RMD160 a876b6ccbbdb803db696a5686d50f6a1768ced75 SHA1 aeb5e58b60361cea58a97a8c971f139ec73ef417 SHA256 e3c8f6951080b9890eb0abf4e479069061fabac040b8fe261c1ca5a40e81d2e3
+EBUILD qt-core-4.5.9999-r1.ebuild 6144 RMD160 d82c197adc7c3bc3d9180024289365b226a6960d SHA1 084db244b9f1026022253fa4783ce8a13da59ebb SHA256 4498ddc231bf15280ffa46a3eaada2416bf98ee1c3bce8829321f1f4be4cedbc
+EBUILD qt-core-4.6.0_alpha_pre1-r2.ebuild 6150 RMD160 b3bc5393a7172a2d904cd4fc7b421e29720f7aed SHA1 9dcbe875c5dad9f5a2212d84c9fa9a533b9a3196 SHA256 6ec1d295fe1134398c95300af3e485ca9e294db65559069f56492358060902d7
+EBUILD qt-core-4.6.9999-r1.ebuild 6139 RMD160 3a77ed6d3b820e1598a6a1ca5810a57dfb001898 SHA1 1f7da8c4ee6968cbdca4995e18b048c75b5b671e SHA256 d97a8edc029952b3a01f3f0ab76f79487ec6181f2637c1c75df2879d35ff7817
+EBUILD qt-core-4.9999-r1.ebuild 6138 RMD160 21f226e2968f08f762c7869d78020a89c3532f54 SHA1 d155af49ffff82440d7f68ac5002224930e4bf56 SHA256 5132968669aec96e0694f0a6b3027e38526dd5bef0b592c85b134ff258a6c54e
+MISC ChangeLog 7949 RMD160 d6f7b05009dba6dddb72f550c5021c9476bc7947 SHA1 6119b6a87010548cd1cf7c38c66f76d9d9a392fe SHA256 15240c19595826bb679a8d9f517cc02345c6de049c9b66e53cccbcd1d7bc146e
 MISC metadata.xml 659 RMD160 0baefcd9e6256860c77e21e41731e266ad1e6b15 SHA1 40df7b57d6ab5c3e553a4b4140ac0ddf70770507 SHA256 dafab6532f4300d81216f626a8e132a81785d27e45ea10d8efb4052bcb593aed
