@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> qt-core-4.5.3-r1.ebuild,
+  qt-core-4.5.9999-r1.ebuild, qt-core-4.6.0_alpha_pre1-r2.ebuild,
+  qt-core-4.6.9999-r1.ebuild, qt-core-4.9999-r1.ebuild:
+  Fixed lrelease to use freshly compiled libraries when generating
+  documentation
+
 *qt-core-4.5.9999-r1 (03 Oct 2009)
 
   03 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> -qt-core-4.5.9999.ebuild,
